--- a/LibraryTests/LibraryLogic.Tests.csproj
+++ b/LibraryTests/LibraryLogic.Tests.csproj
@@ -52,7 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\RentalImplTests.cs" />
+    <Compile Include="Tests\SaleImplTests.cs" />
     <Compile Include="Tests\BookImplTest.cs" />
   </ItemGroup>
   <ItemGroup>
